Switch to GraalVM native image compilation